# arrow-ballista-t

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml
ballista-cli/: Cargo.toml
ballista-cli/src/: exec.rs  main.rs
ballista/client/: Cargo.toml
ballista/client/src/: context.rs  prelude.rs
ballista/core/: Cargo.toml
ballista/core/proto/: ballista.proto  datafusion.proto
ballista/core/src/: config.rs  lib.rs  utils.rs
ballista/core/src/execution_plans/: distributed_query.rs  hash_join.rs  join_utils.rs  mod.rs  remote_once_alloc.rs  rm_shuffle_join_reader.rs  rm_shuffle_join_writer.rs  rm_shuffle_left_writer.rs  rm_shuffle_reader.rs  rm_shuffle_writer.rs  rm_writer.rs  shuffle_reader.rs  shuffle_writer.rs  sm_writer.rs  unresolved_shuffle.rs  utils.rs
ballista/core/src/serde/: mod.rs
ballista/core/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
ballista/executor/: Cargo.toml  executor_config_spec.toml
ballista/executor/src/: collect.rs  execution_engine.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  lib.rs
ballista/executor/src/metrics/: mod.rs
ballista/scheduler/: Cargo.toml  scheduler_config_spec.toml
ballista/scheduler/src/: config.rs  event_loop.rs  flight_sql.rs  lib.rs  planner.rs  rm_planner.rs  scheduler_process.rs  test_utils.rs
ballista/scheduler/src/api/: handlers.rs  mod.rs
ballista/scheduler/src/cluster/: kv.rs  memory.rs  mod.rs
ballista/scheduler/src/cluster/storage/: mod.rs
ballista/scheduler/src/cluster/test/: mod.rs
ballista/scheduler/src/cluster/test_util/: mod.rs
ballista/scheduler/src/scheduler_server/: event.rs  grpc.rs  mod.rs  query_stage_scheduler.rs
ballista/scheduler/src/state/: execution_graph.rs  execution_graph_dot.rs  executor_manager.rs  mod.rs  session_manager.rs  session_registry.rs  task_manager.rs
ballista/scheduler/src/state/execution_graph/: execution_stage.rs
ballista/scheduler/ui/: package.json
ballista/scheduler/ui/src/: App.tsx  index.tsx
ballista/scheduler/ui/src/components/: DataTable.tsx  Header.tsx  QueriesList.tsx  Summary.tsx
benchmarks/: .gitignore  Cargo.toml  convert_to_parquet.py  run.sh
dev/: build-ballista-docker.sh
dev/docker/: ballista-builder.Dockerfile  ballista-cli.Dockerfile  builder-entrypoint.sh  nginx.conf
examples/: Cargo.toml
