# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-core"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.11.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2021"
build = "build.rs"

# Exclude proto files so crates.io consumers don't need protoc
exclude = ["*.proto"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
azure = ["object_store/azure"]
# Used for testing ONLY: causes all values to hash to the same value (test for collisions)
force_hash_collisions = ["datafusion/force_hash_collisions"]
# Used to enable hdfs to be registered in the ObjectStoreRegistry by default
hdfs = ["datafusion-objectstore-hdfs/hdfs"]
hdfs3 = ["datafusion-objectstore-hdfs/hdfs3"]
s3 = ["object_store/azure"]
simd = ["datafusion/simd"]

[dependencies]
arrow-flight = { workspace = true }
async-trait = "0.1.73"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive", "cargo"] }
datafusion = { workspace = true }
datafusion-objectstore-hdfs = { version = "0.1.4", default-features = false, optional = true }
datafusion-proto = { workspace = true }
futures = { workspace = true }
itertools = "0.12"
libc = "0.2.148"
log = "0.4"
object_store = { workspace = true }
once_cell = "1.18.0"

douhua = { git = "https://github.com/XiangpengHao/douhua.git", branch = "numa" }

parse_arg = "0.1.4"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlparser = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }
url = "2.4"
walkdir = "2.4.0"
flatbuffers = "23.5.26"
ahash = "0.8.6"
hashbrown = { version = "0.14.2", features = ["nightly"] }
parking_lot = "0.12.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = { workspace = true }
